Added get customer by first name

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>com.assignment.qa</groupId>
 	<artifactId>CustomerOnboarding</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>CustomerOnboarding</name>
 	<description>QaAssignment</description>
